# xr-dome

./: .env.example  .gitignore  Cargo.toml  README.md  roadmap.md
scripts/: install-viture-udev-rule.sh
src/: app.rs  app_event.rs  control_server.rs  controls.rs  dome.rs  dome_config.rs  main.rs  navigation.rs  panel.rs  ray.rs  renderer.rs  settings.rs  shader.wgsl  surface.rs  texture.rs  workspace.rs
src/integrations/: mod.rs  viture.rs
src/orientation/: keyboard.rs  mod.rs  mouse.rs
viture_sdk/: README.md
