[package]
name = "xr-dome"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
glam = "0.27"
libloading = "0.8"
log = "0.4"
pollster = "0.3"
wgpu = "0.19.4"
winit = "0.29.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
